requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flextool"
version = "3.8.0"
description = "IRENA FlexTool is an energy and power systems model for understanding the role of variable power generation in future energy systems."
requires-python = ">=3.8,<3.13"
dependencies = [
    "pandas",
    "openpyxl",
    "odfpy",
    "spinedb-api",
    "python-calamine",
    "xlsxwriter",
    "pyyaml",
    "sv-ttk"
]

[project.scripts]
flextool-gui = "flextool.gui.__main__:main"
flextool-read-old = "flextool.cli.cmd_read_old_flextool:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = [
    "flextool",
    "flextool.cli",
    "flextool.flextoolrunner",
    "flextool.process_inputs",
    "flextool.process_outputs",
    "flextool.plot_outputs",
    "flextool.update_flextool",
    "flextool.helpers",
    "flextool.scenario_comparison",
    "flextool.gui",
]
