requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flextool"
# First v4 alpha — engine swap, output overhaul and storage-binding
# restructure are in.  4.0.0 final follows after the remaining
# minor-functionality additions, cleanup and testing land.  PEP 440
# pre-release suffix: 4.0.0a1, 4.0.0a2, ... 4.0.0b1, 4.0.0rc1, then 4.0.0.
version = "4.0.0b11"
description = "IRENA FlexTool is an energy and power systems model for understanding the role of variable power generation in future energy systems."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [
    { name = "IRENA FlexTool contributors" },
]
keywords = [
    "energy-systems",
    "optimization",
    "linear-programming",
    "mixed-integer-programming",
    "power-systems",
    "investment-planning",
    "highs",
    "spine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Solver backend — pure-Python; replaces the retired glpsol pipeline.
    # 2.5.0 routes the HiGHS solver log through Python's sys.stdout so it is
    # visible under the Spine-Toolbox Basic Console on Windows (the b6 Toolbox
    # track relies on this); older releases lose the log there. 2.5.1 gates
    # that routing on the sink: it only suppresses HiGHS' native log when
    # sys.stdout isn't fd 1, so machines whose highspy callback is silent
    # (some Linux builds) keep the native log instead of losing it entirely.
    # 2.6.0 adds Problem.coef_zero_threshold, which the v59 model-wide
    # small-number coefficient cutoff sets.  2.9.0 adds the thread-parallel
    # Lagrangian subsolves (max_workers) + per-subsolve callback that the
    # per-solve decomposition path and the --lagrangian-workers knob use —
    # so it is the hard floor here.
    "polar-high>=2.9.0",
    # Cap pins the install default to 1.14.0 (the highest tested
    # version) while leaving room for users to downgrade to older
    # 1.x releases that have been validated against their setup.
    "highspy<=1.14.0",
    # polars 1.40 introduced `pl.struct(...).is_sorted()` (and polar_high's
    # `_verify_dense_sorted` relies on the same call); older versions raise
    # "could not apply comparison on series of dtype 'binary[offset]'" and
    # silently bypass autoscale Layer 2/3.
    "polars>=1.40",
    # Core data + I/O.
    "pandas",
    "spinedb-api",
    "openpyxl",
    "odfpy",
    "python-calamine",
    "xlsxwriter",
    "pyyaml",
    "matplotlib",
    "psutil",
    # GUI runtime — sv-ttk pulls tkinter theming.  Headless installs that
    # never import flextool.gui won't actually load this, but it's
    # listed as core to keep the existing CLI ↔ GUI installs symmetric.
    # Move to an optional [gui] extra in a future release if headless
    # users complain about the install size.
    "sv-ttk",
    # Per-monitor geometry so GUI windows open on the main window's
    # monitor instead of stretching across the whole virtual desktop.
    # Tk has no portable multi-monitor API; flextool.gui.ui_metrics falls
    # back to a maximise-probe if this is unavailable.
    "screeninfo",
    "pywin32; sys_platform == 'win32'",
]

[project.urls]
Documentation = "https://irena-flextool.github.io/flextool/"
Repository = "https://github.com/irena-flextool/flextool"
Issues = "https://github.com/irena-flextool/flextool/issues"

[project.optional-dependencies]
toolbox = ["spinetoolbox"]
viewer = ["tsdownsample>=0.1.3", "networkx>=3.0"]
# Backward-compat alias — engine-polars is now the only engine and its
# dependencies are part of the core install.  Empty list kept so any
# automation pinned to ``pip install flextool[engine-polars]`` keeps
# working.
engine-polars = []
# Dev tooling for running the test suite locally and in CI.  ``pytest``
# itself is included for completeness even though it's transitively
# pulled in by ``spinetoolbox``.  ``pytest-timeout`` enforces a hard
# per-test wallclock cap so a HiGHS solve that wedges in a C extension
# doesn't stall the full sweep (see ``[tool.pytest.ini_options]``
# below for the default).
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    # Parallel test execution.  The default ``addopts`` runs the suite with
    # ``-n 8`` (see ``[tool.pytest.ini_options]`` below), so xdist is a hard
    # dev/CI requirement, not optional.
    "pytest-xdist>=3.0",
    "ruff>=0.5",
]

[project.gui-scripts]
# Windowed launchers — on Windows these use pythonw.exe (no stray console
# window behind the GUI); identical to [project.scripts] on Linux/macOS. Bare
# `flextool` is equivalent to `python -m flextool.gui`.
flextool = "flextool.gui.__main__:main"
flextool-gui = "flextool.gui.__main__:main"

[project.scripts]
# Primary entry points — kept hyphen-cased for `flextool-*` CLI uniformity.
flextool-run = "flextool.cli.cmd_run_flextool:main"
flextool-update = "flextool.cli.cmd_update_flextool:main"
flextool-write-outputs = "flextool.cli.cmd_write_outputs:main"
flextool-migrate-database = "flextool.cli.cmd_migrate_database:main"
flextool-scenario-results = "flextool.cli.cmd_scenario_results:main"
flextool-execute-workflow = "flextool.cli.cmd_execute_flextool_workflow:main"
flextool-export-to-tabular = "flextool.cli.cmd_export_to_tabular:main"
flextool-read-tabular-input = "flextool.cli.cmd_read_tabular_input:main"
flextool-read-self-describing-tabular-input = "flextool.cli.cmd_read_self_describing_tabular_input:main"
# Existing entry points retained.
flextool-read-old = "flextool.cli.cmd_read_old_flextool:main"
flextool-import-sensitivities = "flextool.cli.cmd_import_sensitivities:main"
flextool-read-matpower = "flextool.cli.cmd_read_matpower:main"

[tool.pytest.ini_options]
pythonpath = ["."]
# ``-n 8`` runs the suite across 8 worker processes by default (pytest-xdist,
# a [dev] dependency).  Each worker is a separate process, so the per-test
# global-state resets stay isolated.  Pass ``-n 0`` to disable parallelism for
# interactive debugging (``-s`` / ``--pdb`` need a single process).
addopts = "--import-mode=importlib -n 8"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "solver: marks tests that invoke a real solver (5-60s each); deselect with '-m \"not solver\"'",
    "smoke: fast Layer-1 scenarios for the per-commit gate",
]
testpaths = ["tests"]
# Hard per-test wallclock cap.  Used by ``pytest-timeout`` (installed
# via ``pip install -e .[dev]``).  The default applies to every test
# unless overridden with ``@pytest.mark.timeout(N)`` or the CLI
# ``--timeout=N``.  300 s is comfortable headroom for the slowest
# legitimate rolling scenarios while still cutting off HiGHS runs
# that wedge in a C extension and ignore SIGTERM.
# ``thread`` mode runs the test in a thread and dumps a traceback
# on timeout — works for tests stuck inside C extensions where the
# default ``signal`` mode can't fire from a non-main thread.
timeout = 300
timeout_method = "thread"

[tool.setuptools.packages.find]
# Auto-discover all flextool subpackages.  Excludes test/scratch dirs.
where = ["."]
include = ["flextool*"]
exclude = ["flextool*.__pycache__"]

[tool.setuptools.package-data]
# Static data files bundled with the wheel and accessed at runtime via
# ``flextool._resources.package_data_path``:
#   * schemas/*.json                    — schema templates (spinedb_schema.json, axis
#                                         contract, output/comparison-settings seeds)
#   * schemas/*.md                      — schema docs (AXIS_CONTRACT.md)
#   * schemas/*.yaml                    — YAML configs (default plots/colors)
#   * schemas/canonical_databases/*.json — canonical example/template DB sources
#   * schemas/pre_v26/*.json            — pre-v26 migration-step template snapshots
#   * solver_config/*.opt.template      — solver options templates (HiGHS + the
#                                         commercial solvers; seeded into
#                                         solver_config/<solver>.opt on first run)
#   * export_to_tabular/*.yaml          — export settings (sheet config etc.)
flextool = [
    "schemas/*.json",
    "schemas/*.md",
    "schemas/*.yaml",
    "schemas/canonical_databases/*.json",
    "schemas/pre_v26/*.json",
    "solver_config/*.opt.template",
    "export_to_tabular/*.yaml",
]
